<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wppdisney"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/pelucheImageInfo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="35sp"
        android:contentDescription="@string/imagepeluche"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pelucheImageInfo">

        <TextView
            android:id="@+id/pelucheNameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/peluchePriceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pelucheDescriptionInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pelucheTailleInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pelucheTypeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonPanier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_der_au_panier"
        app:layout_constraintBottom_toTopOf="@id/buttonAjouter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/ajouter_au_panier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonSupprimer" />

    <Button
        android:id="@+id/buttonSupprimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/supprimer_du_panier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/buttonAjouter"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>